# Memrex

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: memcard.h
sample/: Brigandine.mcr  epsxe001.mcr  ff9e.mem  final_fantasy_vii_c.gme  final_fantasy_viii_omega.GME  newmem.mcr  newmem.mem  newmem2.mem  suikoden_perfect.GME  tekken3.mem
src/: font.cpp  font.h  main.cpp  main.h  memcard.cpp  memcard.h  memcardview.cpp  memcardview.h  platform.h  renderer.cpp  renderer.h
